--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap-icons": "^1.11.1",
     "chart.js": "^3.1.1",
     "jquery": "^3.7.1",
+    "mercadopago": "^2.0.2",
     "rxjs": "~7.8.0",
     "swiper": "^10.3.1",
     "tslib": "^2.3.0",
